agregacion de modelos y actualizacion de app -DG

--- a/list/static/css/style.css
+++ b/list/static/css/style.css
@@ -12,6 +12,18 @@
 }
 
 
+.dz-error-message span{
+    display: none;
+    position: absolute;
+}
+
+
+.dz-error-message span{
+    display: none;
+    position: absolute;
+    background-color: transparent;
+}
+
 #linebar{
     top: 16rem;
     height: 32px;
