--- a/list/templates/addList.html
+++ b/list/templates/addList.html
@@ -10,25 +10,25 @@
     
     <div class="container flex-grow-1 px-5 pt-2">
             <div class="d-flex py-2 justify-content-between mb-3 flex-wrap align-items-center">
-                <h4 class="text-gray fw-bold p-0 m-0">Consulta masiva</h4>
+                <h4 class="text-gray fw-bold p-0 m-0">Agregar </h4>
         
                 <ul class="d-flex flex-row p-0 m-0 custom-breadcrumb">
                     <li class="fw-bolder text-dark "><a href="/">Inicio</a></li>
                     <li class="mx-2">|</li>
-                    <li class="fw-lighter">Consulta masiva</li>
+                    <li class="fw-lighter">Agregar </li>
                 </ul>
             </div>
 
             
         <div class="card">
             <div class="card-header bg-white d-flex flex-row align-items-center justify-content-between py-3">
-                <h6 class="text-gray fw-bold p-0 m-0">Plantilla consulta masiva</h6>
+                <h6 class="text-gray fw-bold p-0 m-0">Plantilla </h6>
                 <button class="btn-download" onclick="downloadPla()">Descargar Plantilla <i class="fa-solid fa-download"></i></button>
             </div>
             <div class="card-body">            
                 <div class="row mb-3">
 
-                    <div class="col-md-8">
+                    <div class="col-md-4">
                         <div class="card mb-3">
                             <div class="card-header bg-white d-flex flex-row align-items-center justify-content-between py-3">
                                 <h6 class="card-title m-0 fw-bold">Importar </h6>
@@ -81,8 +81,33 @@
             
                     </div>
                     
-                
+                    <div class="col-md-8">
+                        <table id="companies_table" class="table nowrap responsive table-striped dt-responsive" width="100%">
+                            <thead>
+                                <tr>
+                                    <th data-priority="1">Nombre</th>
+                                    <th>Fecha Retiro</th>
+                                    <th>Observacion</th>
+                                    <th>Avance</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th data-priority="1">Nombre</th>
+                                    <th>Fecha Retiro</th>
+                                    <th>Observacion</th>
+                                    <th>Avance</th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                    
                 </div>
+
+
+
             </div>
         
         </div>
@@ -96,12 +121,10 @@
 </div>
 
 
-
 {% endblock %}
 
 {% block imports %}
 
-<script type="text/javascript" src="{% static 'js/employee_form.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/imports_files.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/addList.js' %}"></script>
 
 {% endblock %}
