--- a/list/templates/home.html
+++ b/list/templates/home.html
@@ -8,7 +8,7 @@
             style="color: #aab2c6; text-shadow: 0.1em 0.1em 0.2em #dfe3e9;">LISTA INTERNA</h1>
         <p class="mt-3 animate__animated animate__fadeIn" style="color:#aab7c6 ;"></p>
 
-        <img id="img_list" src="{% static '/img/undraw_export_files_re.svg' %}" alt="">
+        <img id="img_list" src="{% static '/img/LISTAS-NEGRAS.png' %}" alt="">
 
     </div>
 
