--- a/list/templates/addList.html
+++ b/list/templates/addList.html
@@ -8,7 +8,7 @@
 
 <div class="body container flex-grow-1 px-5 pt-2">
     
-    <div class="container flex-grow-1 px-5 pt-2">
+    <div class="container flex-grow-1">
             <div class="d-flex py-2 justify-content-between mb-3 flex-wrap align-items-center">
                 <h4 class="text-gray fw-bold p-0 m-0">Agregar </h4>
         
@@ -81,27 +81,34 @@
             
                     </div>
                     
-                    <div class="col-md-8">
-                        <table id="companies_table" class="table nowrap responsive table-striped dt-responsive" width="100%">
-                            <thead>
-                                <tr>
-                                    <th data-priority="1">Nombre</th>
-                                    <th>Fecha Retiro</th>
-                                    <th>Observacion</th>
-                                    <th>Avance</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th data-priority="1">Nombre</th>
-                                    <th>Fecha Retiro</th>
-                                    <th>Observacion</th>
-                                    <th>Avance</th>
-                                </tr>
-                            </tfoot>
-                        </table>
+                    <div class="card col-md-8">
+
+                        <div class="card-body" >
+                            <table id="employee_table" class="table nowrap responsive table-striped dt-responsive" width="100%">
+                                <thead>
+                                    <tr>
+                                        <th data-priority="1">C.C</th>
+                                        <th>Nombre</th>
+                                        <th>Fecha Retiro</th>
+                                        <th>Observacion</th>
+                                        <th>Avance</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th data-priority="1">C.C</th>
+                                        <th>Nombre</th>
+                                        <th>Fecha Retiro</th>
+                                        <th>Observacion</th>
+                                        <th>Avance</th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+
+
                     </div>
                     
                 </div>
