CRUD para agregar  ex-empleados -DG

--- a/list/templates/addList.html
+++ b/list/templates/addList.html
@@ -10,12 +10,12 @@
     
     <div class="container flex-grow-1">
             <div class="d-flex py-2 justify-content-between mb-3 flex-wrap align-items-center">
-                <h4 class="text-gray fw-bold p-0 m-0">Agregar </h4>
+                <h4 class="text-gray fw-bold p-0 m-0">Agregar ex expleados</h4>
         
                 <ul class="d-flex flex-row p-0 m-0 custom-breadcrumb">
                     <li class="fw-bolder text-dark "><a href="/">Inicio</a></li>
                     <li class="mx-2">|</li>
-                    <li class="fw-lighter">Agregar </li>
+                    <li class="fw-lighter">Agregar ex expleados</li>
                 </ul>
             </div>
 
@@ -23,16 +23,13 @@
         <div class="card">
             <div class="card-header bg-white d-flex flex-row align-items-center justify-content-between py-3">
                 <h6 class="text-gray fw-bold p-0 m-0">Plantilla </h6>
-                <button class="btn-download" onclick="downloadPla()">Descargar Plantilla <i class="fa-solid fa-download"></i></button>
+                <button class="btn-download" onclick="downloadExcel()">Descargar Plantilla <i class="fa-solid fa-download"></i></button>
             </div>
             <div class="card-body">            
                 <div class="row mb-3">
 
-                    <div class="col-md-4">
+                    <div class="col-md-12">
                         <div class="card mb-3">
-                            <div class="card-header bg-white d-flex flex-row align-items-center justify-content-between py-3">
-                                <h6 class="card-title m-0 fw-bold">Importar </h6>
-                            </div>
                             <div class="p-3">
                                 <div class="card drag-file-area justify-content-center ">
                                     <div class="">
@@ -81,7 +78,7 @@
             
                     </div>
                     
-                    <div class="card col-md-8">
+                    <div class="card col-md-12">
 
                         <div class="card-body" >
                             <table id="employee_table" class="table nowrap responsive table-striped dt-responsive" width="100%">
