--- a/config/templates/layout.html
+++ b/config/templates/layout.html
@@ -51,7 +51,8 @@
 
     
     
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+
     <script type="text/javascript" charset="utf8" src="{% static '/js/main.js' %}"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
