CRUD para hacer consultas individuales -DG

--- a/config/templates/partials/_sidebar.html
+++ b/config/templates/partials/_sidebar.html
@@ -24,7 +24,7 @@
                         href="{% url  'mass_query' %}"></i> Consulta Masiva</a></li>
             
                     <li class="nav-item mx-2"><a id="list_page" class="nav-nested-link fs-6 fw-light" aria-current="page"
-                        href="{% url  'consult_lists' %}"></i> Consultar Listas</a></li>
+                        href="{% url  'consult_lists' %}"></i> Consultar individual</a></li>
                 </ul>
             </div>
         </li>
