--- a/list/static/css/style.css
+++ b/list/static/css/style.css
@@ -75,7 +75,7 @@ nav {
 /* The side navigation menu */
 .sidenav {
     height: 100%;
-    width: 239px;
+    width: 259px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -619,3 +619,68 @@ footer {
 #select2-delivery_type-container{
     font-size: 10px;
 }
+
+
+
+.input-container {
+    position: relative;
+    display: flex;
+    height: 2.8rem;
+    width: 50%;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
+  }
+  
+  .input-container input {
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid  rgb(176 190 197);
+    background-color: transparent;
+    padding: 0.625rem 70px 0.625rem 0.75rem;
+    font-size: 18px;
+    line-height: 1.25rem;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    outline: none;
+    transition: all .15s cubic-bezier(0.4, 0, 0.2, 1);
+    font-weight: 400;
+  }
+  
+  .input-container input:focus {
+    border: 1px solid #112037;
+  }
+  
+  .invite-btn {
+    position: absolute;
+    width: 65px;
+    right: 4px;
+    top: 4px;
+    bottom: 4px;
+    z-index: 10;
+    border-radius: 4px;
+    background-color: #112037;
+    color: #fff;
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border: none;
+  }
+  
+  .invite-btn:hover {
+    background-color: #122a4e;
+
+  }
+  
+  .input-container input:placeholder-shown ~ .invite-btn {
+    pointer-events: none;
+    background-color: gray;
+    opacity: 0.5;
+  }
