--- a/list/templates/consult_lists.html
+++ b/list/templates/consult_lists.html
@@ -4,64 +4,59 @@
 {% load static %}
 
 
-
 <div class="body container flex-grow-1 px-5 pt-2">
     <div class="container flex-grow-1 px-5 pt-2">
+
         <div class="d-flex py-2 justify-content-between mb-3 flex-wrap align-items-center">
-            <h4 class="text-gray fw-bold p-0 m-0">Consultar Listas</h4>
-    
+            <h4 class="text-gray fw-bold p-0 m-0"> Consulta individual</h4>
+
             <ul class="d-flex flex-row p-0 m-0 custom-breadcrumb">
                 <li class="fw-bolder text-dark "><a href="/">Inicio</a></li>
                 <li class="mx-2">|</li>
-                <li class="fw-lighter">Consultar Listas</li>
+                <li class="fw-lighter">
+                    Consulta individual                
+                </li>
             </ul>
         </div>
-    
-        <div class="card flex-grow-1">
 
-            <form id="account-form">
-                <div class="card-body">
-                    <div class="form-group mb-4">
-                        <label for="name" class="form-label">Nombre Completo 
-                            <span class="text-danger">*</span> </label>
-                        <input required placeholder="Escriba el nombre a consultar" class="form-control" type="text" name="name" id="name" >
-                    </div>
-    
-                    <div class="form-group mb-4">
-                        <label for="identification" class="form-label">Identificación 
-                            <span class="text-danger">*</span>
-                        </label>
-                        <input required  placeholder="Escriba el numero de identificación a consultar" class="form-control" type="text" name="identification" id="identification" >
-                    </div>
-    
-                    <div class="form-group mb-4">
-                        <label for="username" class="form-label">Tipo de Tercero
-                            <span class="text-danger">*</span>
-                        </label>
-                        <select class="form-select" id="cost_center" required>
-                            <option value="" selected >Seleccione una opción</option>
-                        </select>
-                    </div>
-    
-                </div>
-                <div class="card-footer justify-content-end d-flex bg-white">
-                    <button class="btn btn-success" type="submit">Consultar</button>
-                </div>
-            </form>
+        <div class="card col-md-12">
+
+            <div class="card-body" >
+                <table id="employee_table" class="table nowrap responsive table-striped dt-responsive" width="100%">
+                    <thead>
+                        <tr>
+                            <th data-priority="1">C.C</th>
+                            <th>Nombre</th>
+                            <th>Fecha Retiro</th>
+                            <th>Observacion</th>
+                            <th>Avance</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th data-priority="1">C.C</th>
+                            <th>Nombre</th>
+                            <th>Fecha Retiro</th>
+                            <th>Observacion</th>
+                            <th>Avance</th>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+
+
         </div>
+
     </div>
-
-
-
-
 </div>
-
 
 
 {% endblock %}
 
 {% block imports %}
 
-<script type="text/javascript" src="{% static 'js/.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/consult_lists.js' %}"></script>
 
 {% endblock %}
