--- a/list/static/css/style.css
+++ b/list/static/css/style.css
@@ -622,65 +622,16 @@ footer {
 
 
 
-.input-container {
-    position: relative;
-    display: flex;
-    height: 2.8rem;
-    width: 50%;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
-  }
-  
-  .input-container input {
-    height: 100%;
-    width: 100%;
+  #employee_table_filter input, #employee_table_length select {
     border-radius: 8px;
     border: 1px solid  rgb(176 190 197);
     background-color: transparent;
-    padding: 0.625rem 70px 0.625rem 0.75rem;
-    font-size: 18px;
-    line-height: 1.25rem;
     font-weight: 400;
     color: rgb(0, 0, 0);
     outline: none;
     transition: all .15s cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 400;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
   
-  .input-container input:focus {
-    border: 1px solid #112037;
-  }
-  
-  .invite-btn {
-    position: absolute;
-    width: 65px;
-    right: 4px;
-    top: 4px;
-    bottom: 4px;
-    z-index: 10;
-    border-radius: 4px;
-    background-color: #112037;
-    color: #fff;
-    padding-top: .25rem;
-    padding-bottom: .25rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 12px;
-    font-weight: 600;
-    text-transform: uppercase;
-    border: none;
-  }
-  
-  .invite-btn:hover {
-    background-color: #122a4e;
-
-  }
-  
-  .input-container input:placeholder-shown ~ .invite-btn {
-    pointer-events: none;
-    background-color: gray;
-    opacity: 0.5;
-  }
