--- a/list/templates/mass_query.html
+++ b/list/templates/mass_query.html
@@ -26,66 +26,65 @@
                 <h6 class="text-gray fw-bold p-0 m-0">Plantilla consulta masiva</h6>
                 <button class="btn-download" onclick="downloadPla()">Descargar Plantilla <i class="fa-solid fa-download"></i></button>
             </div>
-            <div class="card-body">            
-                <div class="row mb-3">
 
-                    <div class="col-md-12">
-                        <div class="card mb-3">
-                            <div class="card-header bg-white d-flex flex-row align-items-center justify-content-between py-3">
-                                <h6 class="card-title m-0 fw-bold">Importar </h6>
-                            </div>
-                            <div class="p-3">
-                                <div class="card drag-file-area justify-content-center ">
-                                    <div class="">
-                                        <span class="material-icons-outlined upload-icon"> file_upload </span>
-                                        <h3 class="dynamic-message">Arrastra y suelta el archivo aquí</h3>
-            
-                                    </div>
-                                    <div class="cannot-message">
-                                        <span class="cannot-upload-message"> <span class="material-icons-outlined">error</span>
-                                            Seleccione un archivo primero <span
-                                                class="material-icons-outlined cancel-alert-button">cancelar</span> </span>
-                                    </div>
-            
-                                    <div class="container-label">
-                                        <label class="label"><span class="browse-files"> <input type="file"
-                                                    class="default-file-input" />
-                                                <div class="cont-button"> <span class="browse-files-text"><i
-                                                            class="fa-solid fa-magnifying-glass"></i> Buscar archivo</span> </div>
-                                                <span></span>
-                                            </span> </label>
-                                    </div>
+            <div class="row mb-3">
+                <div class="col-md-12">
+                    <div class="card mb-3">
+
+                        <div class="p-3">
+                            <div class="card drag-file-area justify-content-center ">
+                                <div class="">
+                                    <span class="material-icons-outlined upload-icon"> file_upload </span>
+                                    <h3 class="dynamic-message">Arrastra y suelta el archivo aquí</h3>
+        
                                 </div>
-                            </div>
-                            <div class="d-flex p-3 flex-column">
-                                <div class="connot-file-block">
-                                    <div class="file-block">
-                                        <div class="file-info"> <span class="material-icons-outlined file-icon">description</span>
-                                            <div class="d-flex flex-column align-items-start"> <span class="file-name"> </span>
-                                                <span class="file-size"> </span>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex">
-                                            <button id="remove-file-button" type="button" class="btn btn-danger me-2"><i class="fa-solid fa-trash-can"></i></button>
-                                            
-                                            <button id="upload-button" type="button" class="btn btn-success"> <i
-                                                    class="fa-solid fa-cloud-arrow-up"></i> </button>
-                                        </div>
-                                        <div style="width: 357px !important; " class="progress-bar"> </div>
-                                    </div>
+                                <div class="cannot-message">
+                                    <span class="cannot-upload-message"> <span class="material-icons-outlined">error</span>
+                                        Seleccione un archivo primero <span
+                                            class="material-icons-outlined cancel-alert-button">cancelar</span> </span>
                                 </div>
-                                <div class="connot-button">
-                                    
+        
+                                <div class="container-label">
+                                    <label class="label"><span class="browse-files"> <input type="file"
+                                                class="default-file-input" />
+                                            <div class="cont-button"> <span class="browse-files-text"><i
+                                                        class="fa-solid fa-magnifying-glass"></i> Buscar archivo</span> </div>
+                                            <span></span>
+                                        </span> </label>
                                 </div>
                             </div>
                         </div>
-            
+
+                        <div class="d-flex p-3 flex-column">
+                            <div class="connot-file-block">
+                                <div class="file-block">
+                                    <div class="file-info"> <span class="material-icons-outlined file-icon">description</span>
+                                        <div class="d-flex flex-column align-items-start"> <span class="file-name"> </span>
+                                            <span class="file-size"> </span>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex">
+                                        <button id="remove-file-button" type="button" class="btn btn-danger me-2"><i class="fa-solid fa-trash-can"></i></button>
+                                        
+                                        <button id="upload-button" type="button" class="btn btn-success"> <i
+                                                class="fa-solid fa-cloud-arrow-up"></i> </button>
+                                    </div>
+                                    <div style="width: 357px !important; " class="progress-bar"> </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div style="width: 100%;" class="connot-button card-footer">       
+                        </div>
+
                     </div>
-                    
-                
+    
                 </div>
+                
+            
             </div>
         
+
         </div>
 
 
@@ -102,7 +101,6 @@
 
 {% block imports %}
 
-<script type="text/javascript" src="{% static 'js/employee_form.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/imports_files.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/mass_query.js' %}"></script>
 
 {% endblock %}
