--- a/list/templates/mass_query.html
+++ b/list/templates/mass_query.html
@@ -24,7 +24,7 @@
         <div class="card">
             <div class="card-header bg-white d-flex flex-row align-items-center justify-content-between py-3">
                 <h6 class="text-gray fw-bold p-0 m-0">Plantilla consulta masiva</h6>
-                <button class="btn-download" onclick="downloadPla()">Descargar Plantilla <i class="fa-solid fa-download"></i></button>
+                <a class="btn-download" id="downloadExcel" href="{% static 'excel/Consulta masiva.xlsx' %}" >Descargar Plantilla <i class="fa-solid fa-download"></i></a>
             </div>
 
             <div class="row mb-3">
