--- a/list/templates/addList.html
+++ b/list/templates/addList.html
@@ -23,7 +23,7 @@
         <div class="card">
             <div class="card-header bg-white d-flex flex-row align-items-center justify-content-between py-3">
                 <h6 class="text-gray fw-bold p-0 m-0">Plantilla </h6>
-                <button class="btn-download" onclick="downloadExcel()">Descargar Plantilla <i class="fa-solid fa-download"></i></button>
+                <a class="btn-download" id="downloadExcel" href="{% static 'excel/agregar_empleados.xlsx' %}" >Descargar Plantilla <i class="fa-solid fa-download"></i></a>
             </div>
             <div class="card-body">            
                 <div class="row mb-3">
